--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,6 @@
         "linebreak-style": 0,
         "semi": 0,
         "import/no-extraneous-dependencies": ["error",  {"devDependencies": true}],
-        "react/jsx-props-no-spreading": "off",
+        "react/jsx-props-no-spreading": "off"
     }
 }
